# MI-FINANZA

./: .gitignore  pyproject.toml  requirements.txt  vercel.json
app/: db.py  main.py  security.py  services.py  utils.py
app/static/: app.js  styles.css
app/templates/: admin.html  ajustes.html  auth_base.html  auth_login.html  auth_register.html  banco.html  base.html  dashboard.html  deudas.html  gastos.html  ingresos.html  reportes.html
tests/: test_admin_security.py  test_business_rules.py
