[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mi-finanza"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.30.6",
  "jinja2==3.1.5",
  "python-multipart==0.0.20",
  "itsdangerous==2.2.0",
  "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "ruff==0.9.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP007"]
